doc/gram.output
Grammar

    0 $accept: program $end

    1 program: and_or
    2        | ε

    3 and_or: pipeline
    4       | and_or AND_IF pipeline
    5       | and_or OR_IF pipeline

    6 pipeline: command
    7         | pipeline '|' command

    8 command: simple_command
    9        | compound_command
   10        | compound_command redirect_list

   11 compound_command: brace_group
   12                 | subshell

   13 brace_group: '{' and_or '}'

   14 subshell: '(' and_or ')'

   15 simple_command: cmd_prefix WORD cmd_suffix
   16               | cmd_prefix WORD
   17               | cmd_prefix
   18               | WORD cmd_suffix
   19               | WORD

   20 cmd_prefix: io_redirect
   21           | cmd_prefix io_redirect
   22           | ASSIGNMENT_WORD
   23           | cmd_prefix ASSIGNMENT_WORD

   24 cmd_suffix: io_redirect
   25           | cmd_suffix io_redirect
   26           | WORD
   27           | cmd_suffix WORD

   28 redirect_list: io_redirect
   29              | redirect_list io_redirect

   30 io_redirect: '<' WORD
   31            | '>' WORD
   32            | DGREAT WORD
   33            | IO_NUMBER '<' WORD
   34            | IO_NUMBER '>' WORD
   35            | IO_NUMBER DGREAT WORD
   36            | DLESS WORD
   37            | IO_NUMBER DLESS WORD


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 14
    ')' (41) 14
    '<' (60) 30 33
    '>' (62) 31 34
    '{' (123) 13
    '|' (124) 7
    '}' (125) 13
    error (256)
    WORD (258) 15 16 18 19 26 27 30 31 32 33 34 35 36 37
    ASSIGNMENT_WORD (259) 22 23
    IO_NUMBER (260) 33 34 35 37
    AND_IF (261) 4
    OR_IF (262) 5
    DLESS (263) 36 37
    DGREAT (264) 32 35


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    program (18)
        on left: 1 2
        on right: 0
    and_or (19)
        on left: 3 4 5
        on right: 1 4 5 13 14
    pipeline (20)
        on left: 6 7
        on right: 3 4 5 7
    command (21)
        on left: 8 9 10
        on right: 6 7
    compound_command (22)
        on left: 11 12
        on right: 9 10
    brace_group (23)
        on left: 13
        on right: 11
    subshell (24)
        on left: 14
        on right: 12
    simple_command (25)
        on left: 15 16 17 18 19
        on right: 8
    cmd_prefix (26)
        on left: 20 21 22 23
        on right: 15 16 17 21 23
    cmd_suffix (27)
        on left: 24 25 26 27
        on right: 15 18 25 27
    redirect_list (28)
        on left: 28 29
        on right: 10 29
    io_redirect (29)
        on left: 30 31 32 33 34 35 36 37
        on right: 20 21 24 25 28 29


State 0

    0 $accept: • program $end

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    IO_NUMBER        shift, and go to state 3
    DLESS            shift, and go to state 4
    DGREAT           shift, and go to state 5
    '{'              shift, and go to state 6
    '('              shift, and go to state 7
    '<'              shift, and go to state 8
    '>'              shift, and go to state 9

    $default  reduce using rule 2 (program)

    program           go to state 10
    and_or            go to state 11
    pipeline          go to state 12
    command           go to state 13
    compound_command  go to state 14
    brace_group       go to state 15
    subshell          go to state 16
    simple_command    go to state 17
    cmd_prefix        go to state 18
    io_redirect       go to state 19


State 1

   18 simple_command: WORD • cmd_suffix
   19               | WORD •

    WORD       shift, and go to state 20
    IO_NUMBER  shift, and go to state 3
    DLESS      shift, and go to state 4
    DGREAT     shift, and go to state 5
    '<'        shift, and go to state 8
    '>'        shift, and go to state 9

    $default  reduce using rule 19 (simple_command)

    cmd_suffix   go to state 21
    io_redirect  go to state 22


State 2

   22 cmd_prefix: ASSIGNMENT_WORD •

    $default  reduce using rule 22 (cmd_prefix)


State 3

   33 io_redirect: IO_NUMBER • '<' WORD
   34            | IO_NUMBER • '>' WORD
   35            | IO_NUMBER • DGREAT WORD
   37            | IO_NUMBER • DLESS WORD

    DLESS   shift, and go to state 23
    DGREAT  shift, and go to state 24
    '<'     shift, and go to state 25
    '>'     shift, and go to state 26


State 4

   36 io_redirect: DLESS • WORD

    WORD  shift, and go to state 27


State 5

   32 io_redirect: DGREAT • WORD

    WORD  shift, and go to state 28


State 6

   13 brace_group: '{' • and_or '}'

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    IO_NUMBER        shift, and go to state 3
    DLESS            shift, and go to state 4
    DGREAT           shift, and go to state 5
    '{'              shift, and go to state 6
    '('              shift, and go to state 7
    '<'              shift, and go to state 8
    '>'              shift, and go to state 9

    and_or            go to state 29
    pipeline          go to state 12
    command           go to state 13
    compound_command  go to state 14
    brace_group       go to state 15
    subshell          go to state 16
    simple_command    go to state 17
    cmd_prefix        go to state 18
    io_redirect       go to state 19


State 7

   14 subshell: '(' • and_or ')'

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    IO_NUMBER        shift, and go to state 3
    DLESS            shift, and go to state 4
    DGREAT           shift, and go to state 5
    '{'              shift, and go to state 6
    '('              shift, and go to state 7
    '<'              shift, and go to state 8
    '>'              shift, and go to state 9

    and_or            go to state 30
    pipeline          go to state 12
    command           go to state 13
    compound_command  go to state 14
    brace_group       go to state 15
    subshell          go to state 16
    simple_command    go to state 17
    cmd_prefix        go to state 18
    io_redirect       go to state 19


State 8

   30 io_redirect: '<' • WORD

    WORD  shift, and go to state 31


State 9

   31 io_redirect: '>' • WORD

    WORD  shift, and go to state 32


State 10

    0 $accept: program • $end

    $end  shift, and go to state 33


State 11

    1 program: and_or •
    4 and_or: and_or • AND_IF pipeline
    5       | and_or • OR_IF pipeline

    AND_IF  shift, and go to state 34
    OR_IF   shift, and go to state 35

    $default  reduce using rule 1 (program)


State 12

    3 and_or: pipeline •
    7 pipeline: pipeline • '|' command

    '|'  shift, and go to state 36

    $default  reduce using rule 3 (and_or)


State 13

    6 pipeline: command •

    $default  reduce using rule 6 (pipeline)


State 14

    9 command: compound_command •
   10        | compound_command • redirect_list

    IO_NUMBER  shift, and go to state 3
    DLESS      shift, and go to state 4
    DGREAT     shift, and go to state 5
    '<'        shift, and go to state 8
    '>'        shift, and go to state 9

    $default  reduce using rule 9 (command)

    redirect_list  go to state 37
    io_redirect    go to state 38


State 15

   11 compound_command: brace_group •

    $default  reduce using rule 11 (compound_command)


State 16

   12 compound_command: subshell •

    $default  reduce using rule 12 (compound_command)


State 17

    8 command: simple_command •

    $default  reduce using rule 8 (command)


State 18

   15 simple_command: cmd_prefix • WORD cmd_suffix
   16               | cmd_prefix • WORD
   17               | cmd_prefix •
   21 cmd_prefix: cmd_prefix • io_redirect
   23           | cmd_prefix • ASSIGNMENT_WORD

    WORD             shift, and go to state 39
    ASSIGNMENT_WORD  shift, and go to state 40
    IO_NUMBER        shift, and go to state 3
    DLESS            shift, and go to state 4
    DGREAT           shift, and go to state 5
    '<'              shift, and go to state 8
    '>'              shift, and go to state 9

    $default  reduce using rule 17 (simple_command)

    io_redirect  go to state 41


State 19

   20 cmd_prefix: io_redirect •

    $default  reduce using rule 20 (cmd_prefix)


State 20

   26 cmd_suffix: WORD •

    $default  reduce using rule 26 (cmd_suffix)


State 21

   18 simple_command: WORD cmd_suffix •
   25 cmd_suffix: cmd_suffix • io_redirect
   27           | cmd_suffix • WORD

    WORD       shift, and go to state 42
    IO_NUMBER  shift, and go to state 3
    DLESS      shift, and go to state 4
    DGREAT     shift, and go to state 5
    '<'        shift, and go to state 8
    '>'        shift, and go to state 9

    $default  reduce using rule 18 (simple_command)

    io_redirect  go to state 43


State 22

   24 cmd_suffix: io_redirect •

    $default  reduce using rule 24 (cmd_suffix)


State 23

   37 io_redirect: IO_NUMBER DLESS • WORD

    WORD  shift, and go to state 44


State 24

   35 io_redirect: IO_NUMBER DGREAT • WORD

    WORD  shift, and go to state 45


State 25

   33 io_redirect: IO_NUMBER '<' • WORD

    WORD  shift, and go to state 46


State 26

   34 io_redirect: IO_NUMBER '>' • WORD

    WORD  shift, and go to state 47


State 27

   36 io_redirect: DLESS WORD •

    $default  reduce using rule 36 (io_redirect)


State 28

   32 io_redirect: DGREAT WORD •

    $default  reduce using rule 32 (io_redirect)


State 29

    4 and_or: and_or • AND_IF pipeline
    5       | and_or • OR_IF pipeline
   13 brace_group: '{' and_or • '}'

    AND_IF  shift, and go to state 34
    OR_IF   shift, and go to state 35
    '}'     shift, and go to state 48


State 30

    4 and_or: and_or • AND_IF pipeline
    5       | and_or • OR_IF pipeline
   14 subshell: '(' and_or • ')'

    AND_IF  shift, and go to state 34
    OR_IF   shift, and go to state 35
    ')'     shift, and go to state 49


State 31

   30 io_redirect: '<' WORD •

    $default  reduce using rule 30 (io_redirect)


State 32

   31 io_redirect: '>' WORD •

    $default  reduce using rule 31 (io_redirect)


State 33

    0 $accept: program $end •

    $default  accept


State 34

    4 and_or: and_or AND_IF • pipeline

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    IO_NUMBER        shift, and go to state 3
    DLESS            shift, and go to state 4
    DGREAT           shift, and go to state 5
    '{'              shift, and go to state 6
    '('              shift, and go to state 7
    '<'              shift, and go to state 8
    '>'              shift, and go to state 9

    pipeline          go to state 50
    command           go to state 13
    compound_command  go to state 14
    brace_group       go to state 15
    subshell          go to state 16
    simple_command    go to state 17
    cmd_prefix        go to state 18
    io_redirect       go to state 19


State 35

    5 and_or: and_or OR_IF • pipeline

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    IO_NUMBER        shift, and go to state 3
    DLESS            shift, and go to state 4
    DGREAT           shift, and go to state 5
    '{'              shift, and go to state 6
    '('              shift, and go to state 7
    '<'              shift, and go to state 8
    '>'              shift, and go to state 9

    pipeline          go to state 51
    command           go to state 13
    compound_command  go to state 14
    brace_group       go to state 15
    subshell          go to state 16
    simple_command    go to state 17
    cmd_prefix        go to state 18
    io_redirect       go to state 19


State 36

    7 pipeline: pipeline '|' • command

    WORD             shift, and go to state 1
    ASSIGNMENT_WORD  shift, and go to state 2
    IO_NUMBER        shift, and go to state 3
    DLESS            shift, and go to state 4
    DGREAT           shift, and go to state 5
    '{'              shift, and go to state 6
    '('              shift, and go to state 7
    '<'              shift, and go to state 8
    '>'              shift, and go to state 9

    command           go to state 52
    compound_command  go to state 14
    brace_group       go to state 15
    subshell          go to state 16
    simple_command    go to state 17
    cmd_prefix        go to state 18
    io_redirect       go to state 19


State 37

   10 command: compound_command redirect_list •
   29 redirect_list: redirect_list • io_redirect

    IO_NUMBER  shift, and go to state 3
    DLESS      shift, and go to state 4
    DGREAT     shift, and go to state 5
    '<'        shift, and go to state 8
    '>'        shift, and go to state 9

    $default  reduce using rule 10 (command)

    io_redirect  go to state 53


State 38

   28 redirect_list: io_redirect •

    $default  reduce using rule 28 (redirect_list)


State 39

   15 simple_command: cmd_prefix WORD • cmd_suffix
   16               | cmd_prefix WORD •

    WORD       shift, and go to state 20
    IO_NUMBER  shift, and go to state 3
    DLESS      shift, and go to state 4
    DGREAT     shift, and go to state 5
    '<'        shift, and go to state 8
    '>'        shift, and go to state 9

    $default  reduce using rule 16 (simple_command)

    cmd_suffix   go to state 54
    io_redirect  go to state 22


State 40

   23 cmd_prefix: cmd_prefix ASSIGNMENT_WORD •

    $default  reduce using rule 23 (cmd_prefix)


State 41

   21 cmd_prefix: cmd_prefix io_redirect •

    $default  reduce using rule 21 (cmd_prefix)


State 42

   27 cmd_suffix: cmd_suffix WORD •

    $default  reduce using rule 27 (cmd_suffix)


State 43

   25 cmd_suffix: cmd_suffix io_redirect •

    $default  reduce using rule 25 (cmd_suffix)


State 44

   37 io_redirect: IO_NUMBER DLESS WORD •

    $default  reduce using rule 37 (io_redirect)


State 45

   35 io_redirect: IO_NUMBER DGREAT WORD •

    $default  reduce using rule 35 (io_redirect)


State 46

   33 io_redirect: IO_NUMBER '<' WORD •

    $default  reduce using rule 33 (io_redirect)


State 47

   34 io_redirect: IO_NUMBER '>' WORD •

    $default  reduce using rule 34 (io_redirect)


State 48

   13 brace_group: '{' and_or '}' •

    $default  reduce using rule 13 (brace_group)


State 49

   14 subshell: '(' and_or ')' •

    $default  reduce using rule 14 (subshell)


State 50

    4 and_or: and_or AND_IF pipeline •
    7 pipeline: pipeline • '|' command

    '|'  shift, and go to state 36

    $default  reduce using rule 4 (and_or)


State 51

    5 and_or: and_or OR_IF pipeline •
    7 pipeline: pipeline • '|' command

    '|'  shift, and go to state 36

    $default  reduce using rule 5 (and_or)


State 52

    7 pipeline: pipeline '|' command •

    $default  reduce using rule 7 (pipeline)


State 53

   29 redirect_list: redirect_list io_redirect •

    $default  reduce using rule 29 (redirect_list)


State 54

   15 simple_command: cmd_prefix WORD cmd_suffix •
   25 cmd_suffix: cmd_suffix • io_redirect
   27           | cmd_suffix • WORD

    WORD       shift, and go to state 42
    IO_NUMBER  shift, and go to state 3
    DLESS      shift, and go to state 4
    DGREAT     shift, and go to state 5
    '<'        shift, and go to state 8
    '>'        shift, and go to state 9

    $default  reduce using rule 15 (simple_command)

    io_redirect  go to state 43
